fix: align laboratories desktop details with figma

--- a/assets/css/laboratory.css
+++ b/assets/css/laboratory.css
@@ -634,8 +634,8 @@
     width: 28px;
     height: 28px;
     background: var(--color-white);
-    -webkit-mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M10.5 0h3v10.5H24v3H13.5V24h-3V13.5H0v-3h10.5z'/%3E%3C/svg%3E") center/contain no-repeat;
-    mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M10.5 0h3v10.5H24v3H13.5V24h-3V13.5H0v-3h10.5z'/%3E%3C/svg%3E") center/contain no-repeat;
+    -webkit-mask: url("data:image/svg+xml,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.8 0h6.4c1.77 0 3.2 1.43 3.2 3.2v6.4h6.4c1.77 0 3.2 1.43 3.2 3.2v6.4c0 1.77-1.43 3.2-3.2 3.2h-6.4v6.4c0 1.77-1.43 3.2-3.2 3.2h-6.4c-1.77 0-3.2-1.43-3.2-3.2v-6.4H3.2C1.43 22.4 0 20.97 0 19.2v-6.4c0-1.77 1.43-3.2 3.2-3.2h6.4V3.2C9.6 1.43 11.03 0 12.8 0Z'/%3E%3C/svg%3E") center/contain no-repeat;
+    mask: url("data:image/svg+xml,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.8 0h6.4c1.77 0 3.2 1.43 3.2 3.2v6.4h6.4c1.77 0 3.2 1.43 3.2 3.2v6.4c0 1.77-1.43 3.2-3.2 3.2h-6.4v6.4c0 1.77-1.43 3.2-3.2 3.2h-6.4c-1.77 0-3.2-1.43-3.2-3.2v-6.4H3.2C1.43 22.4 0 20.97 0 19.2v-6.4c0-1.77 1.43-3.2 3.2-3.2h6.4V3.2C9.6 1.43 11.03 0 12.8 0Z'/%3E%3C/svg%3E") center/contain no-repeat;
 }
 
 .laboratory-page .lab-why-right-card p { font-size: 20px; line-height: 24px; font-weight: 600; max-width: 221px; text-align: left; }
@@ -998,8 +998,13 @@
     width: 40px;
     height: 40px;
     color: var(--color-white);
+    background: currentColor;
+    -webkit-mask: url("data:image/svg+xml,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.8 0h6.4c1.77 0 3.2 1.43 3.2 3.2v6.4h6.4c1.77 0 3.2 1.43 3.2 3.2v6.4c0 1.77-1.43 3.2-3.2 3.2h-6.4v6.4c0 1.77-1.43 3.2-3.2 3.2h-6.4c-1.77 0-3.2-1.43-3.2-3.2v-6.4H3.2C1.43 22.4 0 20.97 0 19.2v-6.4c0-1.77 1.43-3.2 3.2-3.2h6.4V3.2C9.6 1.43 11.03 0 12.8 0Z'/%3E%3C/svg%3E") center/contain no-repeat;
+    mask: url("data:image/svg+xml,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.8 0h6.4c1.77 0 3.2 1.43 3.2 3.2v6.4h6.4c1.77 0 3.2 1.43 3.2 3.2v6.4c0 1.77-1.43 3.2-3.2 3.2h-6.4v6.4c0 1.77-1.43 3.2-3.2 3.2h-6.4c-1.77 0-3.2-1.43-3.2-3.2v-6.4H3.2C1.43 22.4 0 20.97 0 19.2v-6.4c0-1.77 1.43-3.2 3.2-3.2h6.4V3.2C9.6 1.43 11.03 0 12.8 0Z'/%3E%3C/svg%3E") center/contain no-repeat;
     z-index: 1;
 }
+
+.laboratory-page .request-plus path { display: none; }
 
 .laboratory-page .request-text {
     position: absolute;
